{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 34,
  "lineage": "a912dda7-77ff-cd6f-9926-237163128354",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4675f12a85f7130",
            "arn": "arn:aws:ec2:eu-west-1:467432681913:elastic-ip/eipalloc-0b4675f12a85f7130",
            "association_id": "eipassoc-0155725a6882d8beb",
            "domain": "vpc",
            "id": "eipalloc-0b4675f12a85f7130",
            "instance": "i-02a56a33499b70826",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-009392dcd22404c12",
            "private_dns": "ip-10-0-1-208.eu-west-1.compute.internal",
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-99-80-29-136.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.29.136",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "eipalloc-0b4675f12a85f7130",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_instance.k3s",
            "aws_security_group.k3s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c7a4b4f234dfa77",
            "arn": "arn:aws:ec2:eu-west-1:467432681913:instance/i-02a56a33499b70826",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a56a33499b70826",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "training-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-009392dcd22404c12"
              }
            ],
            "primary_network_interface_id": "eni-009392dcd22404c12",
            "private_dns": "ip-10-0-1-208.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-34-252-250-52.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.250.52",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06415754a6ad7c600",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec7b01b6b1286a17",
            "tags": {
              "Name": "k3s-lab"
            },
            "tags_all": {
              "Name": "k3s-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e30f193444c295c6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "i-02a56a33499b70826",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.k3s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:467432681913:internet-gateway/igw-040d4ca411b37d716",
            "id": "igw-040d4ca411b37d716",
            "owner_id": "467432681913",
            "region": "eu-west-1",
            "vpc_id": "vpc-006c4374df73e055e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "igw-040d4ca411b37d716",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-040d4ca411b37d716",
            "id": "r-rtb-03c178e2336d1da8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-03c178e2336d1da8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-03c178e2336d1da8d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:467432681913:route-table/rtb-03c178e2336d1da8d",
            "id": "rtb-03c178e2336d1da8d",
            "owner_id": "467432681913",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-006c4374df73e055e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "rtb-03c178e2336d1da8d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d69cb28943609e98",
            "region": "eu-west-1",
            "route_table_id": "rtb-03c178e2336d1da8d",
            "subnet_id": "subnet-0ec7b01b6b1286a17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "rtbassoc-0d69cb28943609e98",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:467432681913:security-group/sg-0e30f193444c295c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e30f193444c295c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k3s-lab-sg",
            "name_prefix": "",
            "owner_id": "467432681913",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-006c4374df73e055e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "sg-0e30f193444c295c6",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:467432681913:subnet/subnet-0ec7b01b6b1286a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec7b01b6b1286a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "467432681913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "vpc_id": "vpc-006c4374df73e055e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "subnet-0ec7b01b6b1286a17",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:467432681913:vpc/vpc-006c4374df73e055e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003ab6ddc616156f1",
            "default_route_table_id": "rtb-07c0db4ced2937b87",
            "default_security_group_id": "sg-08948c2a6626d98b1",
            "dhcp_options_id": "dopt-2286d144",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006c4374df73e055e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c0db4ced2937b87",
            "owner_id": "467432681913",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467432681913",
            "id": "vpc-006c4374df73e055e",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}